--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "scripts": {
     "dev": "webpack-dev-server",
     "lint": "eslint src/**",
-    "validate": "npm ls"
+    "start": "npm run build && NODE_ENV=production node server.js",
+    "build": "webpack --config webpack.prod.config.js"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "precommit-hook": "^3.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
