--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "express": "^4.16.3",
     "precommit-hook": "^3.0.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
-  },
-  "devDependencies": {
+    "webpack": "^3.6.0",
+    "react-dom": "^16.2.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.4",
@@ -26,18 +25,17 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2"
+  },
+  "devDependencies": {
     "eslint": "^4.18.2",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "eslint-watch": "^3.1.2",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.6.0",
     "webpack-dev-server": "^2.8.2"
   },
-  "pre-commit": [
-    "lint"
-  ]
+  "pre-commit": ["lint"]
 }
