--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "css-loader": "^0.28.7",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2"
+    "style-loader": "^0.18.2",
+    "eslint-loader": "^1.9.0"
   },
   "devDependencies": {
     "eslint": "^4.18.2",
-    "eslint-loader": "^1.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "eslint-watch": "^3.1.2",
