--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "webpack": "^3.6.0",
     "react-dom": "^16.2.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.4",
     "babel-plugin-module-resolver": "^3.1.0",
     "babel-preset-env": "^1.6.1",
@@ -27,10 +26,11 @@
     "css-loader": "^0.28.7",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "eslint-loader": "^1.9.0"
+    "style-loader": "^0.18.2"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
+    "eslint-loader": "^1.9.0",
     "eslint": "^4.18.2",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
