--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
-  "presets": ["env", "react"],
+  "presets": ["env", "react", "stage-3"],
   "plugins": [
+    ["transform-class-properties", { "spec": true }],
     [
       "module-resolver",
       {
