--- a/package.json
+++ b/package.json
@@ -13,29 +13,38 @@
     "build": "webpack --config webpack.prod.config.js"
   },
   "dependencies": {
-    "express": "^4.16.3",
-    "precommit-hook": "^3.0.0",
-    "react": "^16.2.0",
-    "webpack": "^3.6.0",
-    "react-dom": "^16.2.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-module-resolver": "^3.1.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^0.28.7",
+    "express": "^4.16.3",
     "node-sass": "^4.7.2",
+    "precommit-hook": "^3.0.0",
+    "prop-types": "^15.6.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2"
+    "style-loader": "^0.18.2",
+    "webpack": "^3.6.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
-    "eslint-loader": "^1.9.0",
     "eslint": "^4.18.2",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "eslint-watch": "^3.1.2",
     "webpack-dev-server": "^2.8.2"
   },
-  "pre-commit": ["lint"]
+  "pre-commit": [
+    "lint"
+  ]
 }
