--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^0.28.7",
     "express": "^4.16.3",
+    "firebase": "^4.11.0",
     "node-sass": "^4.7.2",
     "precommit-hook": "^3.0.0",
     "prop-types": "^15.6.1",
