Adding google map and simple add marker on click and log location

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,8 @@
     "__dirname": true,
     "alert": true,
     "require": true,
+    "google": true,
+    "window": true,
     "process": true
   },
   "rules": {}
